// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get all urls from page with domain filtering 1`] = `
Array [
  Object {
    "labels": Array [
      "Page B",
    ],
    "url": "https://my-super-cool-domain.com/pageB",
  },
  Object {
    "labels": Array [
      "Page C",
    ],
    "url": "https://my-super-cool-domain.com/pageC",
  },
  Object {
    "labels": Array [
      "Page D",
    ],
    "url": "https://my-super-cool-domain.com/pageD",
  },
]
`;

exports[`get all urls from page without domain filtering 1`] = `
Array [
  Object {
    "labels": Array [
      "Page B",
    ],
    "url": "https://my-super-cool-domain.com/pageB",
  },
  Object {
    "labels": Array [
      "Page C",
    ],
    "url": "https://my-super-cool-domain.com/pageC",
  },
  Object {
    "labels": Array [
      "Page D",
    ],
    "url": "https://my-super-cool-domain.com/pageD",
  },
  Object {
    "labels": Array [
      "Case studies",
    ],
    "url": "https://wiprodigital.com/what-we-do#wdwork_cases",
  },
  Object {
    "labels": Array [
      "Case Study",
      "Delivering an exceptional mortgage customer experience for Allied Irish Bank",
    ],
    "url": "https://wiprodigital.com/cases/delivering-an-exceptional-mortgage-customer-experience-for-allied-irish-bank/",
  },
  Object {
    "labels": Array [
      "some other domain",
    ],
    "url": "https://some-other-domain",
  },
]
`;

exports[`print sitemap 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Array [
    Object {
      "links": Array [
        Object {
          "labels": Array [
            "Page B",
          ],
          "links": Array [
            Object {
              "labels": Array [
                "Page E",
              ],
              "links": Array [
                Object {
                  "labels": Array [
                    "Page G",
                  ],
                  "links": Array [
                    Object {
                      "labels": Array [
                        "Page X",
                      ],
                      "links": Array [],
                      "parent": "https://my-super-cool-domain.com/pageG",
                      "url": "https://my-super-cool-domain.com/pageX",
                    },
                  ],
                  "parent": "https://my-super-cool-domain.com/pageE",
                  "url": "https://my-super-cool-domain.com/pageG",
                },
              ],
              "parent": "https://my-super-cool-domain.com/pageB",
              "url": "https://my-super-cool-domain.com/pageE",
            },
          ],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageB",
        },
        Object {
          "labels": Array [
            "Page C",
          ],
          "links": Array [
            Object {
              "labels": Array [
                "Page F",
              ],
              "links": Array [],
              "parent": "https://my-super-cool-domain.com/pageC",
              "url": "https://my-super-cool-domain.com/pageF",
            },
          ],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageC",
        },
        Object {
          "labels": Array [
            "Page D",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageD",
        },
      ],
      "url": "https://my-super-cool-domain.com/pageA",
    },
  ],
}
`;

exports[`print sitemap with circular link 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Array [
    Object {
      "links": Array [
        Object {
          "labels": Array [
            "Page B",
          ],
          "links": Array [],
          "parent": "https://my-super-cool-domain.com/pageA",
          "url": "https://my-super-cool-domain.com/pageB",
        },
      ],
      "url": "https://my-super-cool-domain.com/pageA",
    },
  ],
}
`;

exports[`traverse dummy page 1`] = `
Object {
  "https://my-super-cool-domain.com/pageA": Object {
    "links": Array [
      Object {
        "labels": Array [
          "Page B",
        ],
        "url": "https://my-super-cool-domain.com/pageB",
      },
      Object {
        "labels": Array [
          "Page C",
        ],
        "url": "https://my-super-cool-domain.com/pageC",
      },
      Object {
        "labels": Array [
          "Page D",
        ],
        "url": "https://my-super-cool-domain.com/pageD",
      },
    ],
    "url": "https://my-super-cool-domain.com/pageA",
  },
  "https://my-super-cool-domain.com/pageB": Object {
    "labels": Array [
      "Page B",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page C",
        ],
        "url": "https://my-super-cool-domain.com/pageC",
      },
      Object {
        "labels": Array [
          "Page A",
        ],
        "url": "https://my-super-cool-domain.com/pageA",
      },
      Object {
        "labels": Array [
          "Page E",
        ],
        "url": "https://my-super-cool-domain.com/pageE",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://my-super-cool-domain.com/pageB",
  },
  "https://my-super-cool-domain.com/pageC": Object {
    "labels": Array [
      "Page C",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page F",
        ],
        "url": "https://my-super-cool-domain.com/pageF",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://my-super-cool-domain.com/pageC",
  },
  "https://my-super-cool-domain.com/pageD": Object {
    "labels": Array [
      "Page D",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageA",
    "url": "https://my-super-cool-domain.com/pageD",
  },
  "https://my-super-cool-domain.com/pageE": Object {
    "labels": Array [
      "Page E",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page G",
        ],
        "url": "https://my-super-cool-domain.com/pageG",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageB",
    "url": "https://my-super-cool-domain.com/pageE",
  },
  "https://my-super-cool-domain.com/pageF": Object {
    "labels": Array [
      "Page F",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageC",
    "url": "https://my-super-cool-domain.com/pageF",
  },
  "https://my-super-cool-domain.com/pageG": Object {
    "labels": Array [
      "Page G",
    ],
    "links": Array [
      Object {
        "labels": Array [
          "Page X",
        ],
        "url": "https://my-super-cool-domain.com/pageX",
      },
    ],
    "parent": "https://my-super-cool-domain.com/pageE",
    "url": "https://my-super-cool-domain.com/pageG",
  },
  "https://my-super-cool-domain.com/pageX": Object {
    "labels": Array [
      "Page X",
    ],
    "links": Array [],
    "parent": "https://my-super-cool-domain.com/pageG",
    "url": "https://my-super-cool-domain.com/pageX",
  },
}
`;
